# magic-buffer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  release.yml
src/: lib.rs  linux.rs  macos.rs  win.rs  windows.rs
