[package]
name = "vodoo-buffers"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security"
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"