[package]
name = "magic-buffer"
description = "a virtual ring buffer implementation that magically wraps around itself"
keywords = [
    "networking",
    "allocation",
    "buffer",
    "ring buffer"
]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sebastian Klose <mail@sklose.com>"]
repository = "https://github.com/sklose/magic-buffer"
readme = "README.md"

[dependencies]
thiserror = "1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security"
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.4"